exports[`LoadingOverlay should render a null component when isOpen is not provided 1`] = `null`;

exports[`LoadingOverlay when isOpen is provided should render with message prop 1`] = `
<div>
  <div
    class="overlay fullscreen light loading-overlay"
    tabindex="0">
    <div
      class="content">
      <svg
        aria-hidden="true"
        class="icon icon"
        data-name="Layer 1"
        focusable="false"
        height="36"
        viewbox="0 0 48 48"
        width="36"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M24 0a3.8 3.8 0 1 1-3.8 3.8A3.8 3.8 0 0 1 24 0zm0 40.4a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zm20.2-20.2a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zm-40.4 0A3.8 3.8 0 1 1 0 24a3.8 3.8 0 0 1 3.8-3.8zM38.3 5.9a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zM9.7 34.5a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zm0-28.6a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zm28.6 28.6a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8z" />
      </svg>
      <div
        class="message">
        Loading!
      </div>
    </div>
  </div>
</div>
`;

exports[`LoadingOverlay when isOpen is provided the default LoadingOverlay should render a default component 1`] = `
<div>
  <div
    class="overlay fullscreen light loading-overlay"
    tabindex="0">
    <div
      class="content">
      <svg
        aria-hidden="true"
        class="icon icon"
        data-name="Layer 1"
        focusable="false"
        height="36"
        viewbox="0 0 48 48"
        width="36"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M24 0a3.8 3.8 0 1 1-3.8 3.8A3.8 3.8 0 0 1 24 0zm0 40.4a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zm20.2-20.2a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zm-40.4 0A3.8 3.8 0 1 1 0 24a3.8 3.8 0 0 1 3.8-3.8zM38.3 5.9a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zM9.7 34.5a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zm0-28.6a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zm28.6 28.6a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8z" />
      </svg>
      <div
        class="message">
        Loading...
      </div>
    </div>
  </div>
</div>
`;
